# tastytrade-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: ACCOUNT_STREAMING_IMPLEMENTATION_PLAN.md  DXLINK_GAP_ANALYSIS.md
examples/: basic_auth.rs  fetch_market_data.rs  fetch_positions.rs  place_order.rs  stream_quotes.rs  test_account_streaming.rs
src/: error.rs  lib.rs
src/api/: accounts.rs  balances.rs  instruments.rs  market_data.rs  market_time.rs  metrics.rs  mod.rs  orders.rs  search.rs  transactions.rs  watchlists.rs
src/auth/: mod.rs  session.rs
src/client/: config.rs  http.rs  mod.rs  paginated.rs
src/models/: account.rs  balance.rs  enums.rs  instrument.rs  market_data.rs  mod.rs  order.rs  primitives.rs  trading.rs
src/streaming/: mod.rs
src/streaming/account/: config.rs  mod.rs  notifications.rs
src/streaming/dxlink/: compact.rs  events.rs  mod.rs
tests/: api_tests.rs
